Add outliers_cleanup() function

--- a/prep.ipynb
+++ b/prep.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,6 +184,97 @@
    ],
    "source": [
     "check_outliers(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 171,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def outliers_cleanup(df):\n",
+    "    print(f\"Starting {__name__}\")\n",
+    "    \n",
+    "    # Get the list of columns names in the DataFrame\n",
+    "    variables = df.select_dtypes(include='number').columns\n",
+    "\n",
+    "    # Initialise empty array to store indices of outlier rows\n",
+    "    outlier_indices = []\n",
+    "\n",
+    "    # Iterate over unique species values\n",
+    "    for species in df['species'].unique():\n",
+    "        \n",
+    "        # Filter dataframe for the current species\n",
+    "        df_species = df[df['species'] == species]\n",
+    "        print(f'\\n\\tLooping through {species}...')\n",
+    "\n",
+    "        for var in variables: \n",
+    "            # Calculate the upper and lower limits\n",
+    "            Q1 = df_species[var].quantile(0.25)  # The 1st quartile is the value below which 25% of the data can be found\n",
+    "            Q3 = df_species[var].quantile(0.75)  # The 3rd quartile is the value below which 75% of the data falls\n",
+    "\n",
+    "            # Calculate the IQR, which measures the middle 50% of the data\n",
+    "            IQR = Q3 - Q1\n",
+    "\n",
+    "            # Calculate the outlier thresholds as per the above formulas\n",
+    "            # Any data point below/above these values are considered outliers\n",
+    "            lower = Q1 - 1.5 * IQR\n",
+    "            upper = Q3 + 1.5 * IQR\n",
+    "            \n",
+    "            # Use Numpy's where function to get [indices] of upper/lower outliers & combined them\n",
+    "            upper_outliers = np.where(df_species[var] >= upper)[0]\n",
+    "            lower_outliers = np.where(df_species[var] <= lower)[0]\n",
+    "            all_outliers = np.concatenate((upper_outliers, lower_outliers))\n",
+    "            \n",
+    "            # Collect all indices by mapping local indices in df_species back to the global indices in the original df \n",
+    "            # with iloc\n",
+    "            # https://www.geeksforgeeks.org/python-extracting-rows-using-pandas-iloc/\n",
+    "            global_outliers = df_species.iloc[all_outliers].index\n",
+    "            \n",
+    "            # Collect global outlier indices with extend() method to add multiple elements to a list\n",
+    "            # Tried appending but it didn't work as it would add the entire list as a single element, \n",
+    "            # instead of adding each element of the provided iterable to the list individually\n",
+    "            # https://www.geeksforgeeks.org/append-extend-python/\n",
+    "            outlier_indices.extend(global_outliers)\n",
+    "    \n",
+    "    # Drop outliers from the original df\n",
+    "    df = df.drop(index=outlier_indices, inplace=True)\n",
+    "    \n",
+    "    return df\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 172,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting __main__\n",
+      "\n",
+      "\tLooping through setosa...\n",
+      "\n",
+      "\tLooping through versicolor...\n",
+      "\n",
+      "\tLooping through virginica...\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(137, 5)"
+      ]
+     },
+     "execution_count": 172,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "outliers_cleanup(df)\n",
+    "df.shape"
    ]
   },
   {
