--- a/prep.ipynb
+++ b/prep.ipynb
@@ -282,7 +282,43 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Button 4 --------------------------------------------------------------------\n",
+    "    # Create the list of options & a dictionary mapping options to their respective functions\n",
+    "    options_list = [\"Get a summary of outliers\", \"Remove outliers from the dataset\"] \n",
+    "    option_functions = {\n",
+    "    \"Get a summary of outliers\": outliers_summary,\n",
+    "    \"Remove outliers from the dataset\": outliers_cleanup\n",
+    "    }\n",
+    "    \n",
+    "    # Variable to keep track of the option selected in tk.OptionMenu() & set the default value of the variable\n",
+    "    value_inside = tk.StringVar(root,\" .identify & handle outliers\") \n",
+    "    \n",
+    "    # Create the optionmenu widget and passing the options_list and value_inside to it \n",
+    "    # https://www.geeksforgeeks.org/how-to-change-background-color-of-tkinter-optionmenu-widget/\n",
+    "    button1 = tk.OptionMenu(root, value_inside, *options_list) \n",
+    "    button1['font'] = font_buttons\n",
+    "    button1.place(relx=0.60, rely=0.4, anchor=\"center\")  # Place button relative to the center of the window\n",
+    "\n",
+    "    # Se the background color of Options Menu & displayed options\n",
+    "    button1.config(bg=\"LightSteelBlue4\", fg=\"white\", height=1, width=20, anchor=\"w\", justify=\"left\")\n",
+    "    button1[\"menu\"].config(bg=\"LightSteelBlue3\")\n",
+    "\n",
+    "    # Configure the OptionMenu to call the appropriate function when an option is selected\n",
+    "    for option in options_list:\n",
+    "        button1[\"menu\"].entryconfig(option, command=lambda opt=option: option_functions[opt](df))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "    button4 = tk.Button(root, text=\" .get descriptive summary\", height=1, width=25,  anchor=\"w\", justify=\"left\", command=lambda: descriptive_summary(df), bg=\"LightSteelBlue4\", fg=\"white\")\n",
+    "    button4.place(relx=0.60, rely=0.7, anchor=\"center\")  # Place button relative to the center of the window\n",
+    "    button4['font'] = font_buttons"
+   ]
   }
  ],
  "metadata": {
