Swap opening_menu() buttons position for logical reasons.

--- a/prep.ipynb
+++ b/prep.ipynb
@@ -315,9 +315,51 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "    button4 = tk.Button(root, text=\" .get descriptive summary\", height=1, width=25,  anchor=\"w\", justify=\"left\", command=lambda: descriptive_summary(df), bg=\"LightSteelBlue4\", fg=\"white\")\n",
-    "    button4.place(relx=0.60, rely=0.7, anchor=\"center\")  # Place button relative to the center of the window\n",
-    "    button4['font'] = font_buttons"
+    "# Create the list of options & a dictionary mapping options to their respective functions\n",
+    "    options_list = [\"Get a summary of outliers\", \"Remove outliers from the dataset\"] \n",
+    "    option_functions = {\n",
+    "    \"Get a summary of outliers\": outliers_summary,\n",
+    "    \"Remove outliers from the dataset\": outliers_cleanup\n",
+    "    }\n",
+    "    \n",
+    "    # Variable to keep track of the option selected in tk.OptionMenu() & set the default value of the variable\n",
+    "    value_inside = tk.StringVar(root,\" .identify & handle outliers\") \n",
+    "    \n",
+    "    # Create the optionmenu widget and passing the options_list and value_inside to it \n",
+    "    # https://www.geeksforgeeks.org/how-to-change-background-color-of-tkinter-optionmenu-widget/\n",
+    "    button2 = tk.OptionMenu(root, value_inside, *options_list) \n",
+    "    button2['font'] = font_buttons\n",
+    "    button2.place(relx=0.60, rely=0.5, anchor=\"center\")  # Place button relative to the center of the window\n",
+    "\n",
+    "    # Se the background color of Options Menu & displayed options\n",
+    "    button2.config(bg=\"#5E7F73\", fg=\"white\", height=1, width=23, anchor=\"w\", justify=\"left\")\n",
+    "    button2[\"menu\"].config(bg=\"#7A9F92\")\n",
+    "\n",
+    "    # Configure the OptionMenu to call the appropriate function when an option is selected\n",
+    "    for option in options_list:\n",
+    "        button2[\"menu\"].entryconfig(option, command=lambda opt=option: option_functions[opt](df))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "    button1 = tk.Button(root, text=\" .get descriptive summary\", height=1, width=30,  anchor=\"w\", justify=\"left\", command=lambda: descriptive_summary(df), bg=\"#5E7F73\", fg=\"white\")\n",
+    "    button1.place(relx=0.60, rely=0.8, anchor=\"center\")  # Place button relative to the center of the window\n",
+    "    button1['font'] = font_buttons\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "    button3 = tk.Button(root, text=\" .generate histogram\", height=1, width=30,  anchor=\"w\", justify=\"left\", command=lambda: generate_histogram_options(df, df_cleaned), bg=\"#5E7F73\", fg=\"white\")\n",
+    "    button3.place(relx=0.60, rely=0.6, anchor=\"center\")  # Place button relative to the center of the window\n",
+    "    button3['font'] = font_buttons"
    ]
   }
  ],
